feat: [resources]: update AddressGroup for HOSTS
